--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,167 +1,168 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
+@import url("https://fonts.googleapis.com/css?family=Raleway:400,700");
 
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Raleway, sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Raleway, sans-serif;
 }
 
 body {
-  background: linear-gradient(90deg, rgb(226, 224, 255), #3071c3);
+    background: linear-gradient(90deg, rgb(226, 224, 255), #3071c3);
 }
 
 .container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
 }
 
 .screen {
-  background: linear-gradient(90deg, #7ec1db, #e4fcfa);
-  position: relative;
-  height: 600px;
-  width: 360px;
-  box-shadow: 0px 0px 24px #3d91be;
+    background: linear-gradient(90deg, #7ec1db, #e4fcfa);
+    position: relative;
+    height: 600px;
+    width: 360px;
+    box-shadow: 0px 0px 24px #3d91be;
 }
 
 .screen__content {
-  z-index: 1;
-  position: relative;
-  height: 100%;
+    z-index: 1;
+    position: relative;
+    height: 100%;
 }
 
 .screen__background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 0;
-  -webkit-clip-path: inset(0 0 0 0);
-  clip-path: inset(0 0 0 0);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 0;
+    -webkit-clip-path: inset(0 0 0 0);
+    clip-path: inset(0 0 0 0);
 }
 
 .screen__background__shape {
-  transform: rotate(45deg);
-  position: absolute;
+    transform: rotate(45deg);
+    position: absolute;
 }
 
 .screen__background__shape1 {
-  height: 520px;
-  width: 520px;
-  background: #fff;
-  top: -50px;
-  right: 120px;
-  border-radius: 0 72px 0 0;
+    height: 520px;
+    width: 520px;
+    background: #fff;
+    top: -50px;
+    right: 120px;
+    border-radius: 0 72px 0 0;
 }
 
 .screen__background__shape2 {
-  height: 220px;
-  width: 220px;
-  background: #d4fef8;
-  top: -172px;
-  right: 0;
-  border-radius: 32px;
+    height: 220px;
+    width: 220px;
+    background: #d4fef8;
+    top: -172px;
+    right: 0;
+    border-radius: 32px;
 }
 
 .screen__background__shape3 {
-  height: 540px;
-  width: 190px;
-  background: linear-gradient(270deg, #4260a1, #69b6df);
-  top: -24px;
-  right: 0;
-  border-radius: 32px;
+    height: 540px;
+    width: 190px;
+    background: linear-gradient(270deg, #4260a1, #69b6df);
+    top: -24px;
+    right: 0;
+    border-radius: 32px;
 }
 
 .screen__background__shape4 {
-  height: 400px;
-  width: 200px;
-  background: #3e92bd;
-  top: 420px;
-  right: 50px;
-  border-radius: 60px;
+    height: 400px;
+    width: 200px;
+    background: #3e92bd;
+    top: 420px;
+    right: 50px;
+    border-radius: 60px;
 }
 
 .login {
-  width: 360px;
-  padding: 30px;
-  padding-top: 156px;
+    width: 360px;
+    padding: 30px;
+    padding-top: 110px;
 }
 
 .login__field {
-  padding: 20px 0px;
-  position: relative;
+    padding: 20px 0px;
+    position: relative;
 }
 
 .login__icon {
-  position: absolute;
-  top: 30px;
-  color: #483eff;
+    position: absolute;
+    top: 30px;
+    color: #483eff;
 }
 
 .login__input {
-  border: none;
-  border-bottom: 2px solid #ebebeb;
-  background: none;
-  padding: 10px;
-  padding-left: 24px;
-  font-weight: 700;
-  width: 75%;
-  transition: 0.2s;
+    border: none;
+    border-bottom: 2px solid #ebebeb;
+    background: none;
+    padding: 10px;
+    padding-left: 24px;
+    font-weight: 700;
+    width: 75%;
+    transition: 0.2s;
 }
 
 .login__input:active,
 .login__input:focus,
 .login__input:hover {
-  outline: none;
-  border-bottom-color: #7a83b1;
+    outline: none;
+    border-bottom-color: #7a83b1;
 }
 
 .login__submit {
-  background: #fff;
-  font-size: 14px;
-  margin-top: 30px;
-  padding: 16px 20px;
-  border-radius: 26px;
-  border: 1px solid #d4d3e8;
-  text-transform: uppercase;
-  font-weight: 700;
-  display: flex;
-  align-items: center;
-  width: 100%;
-  color: #485c9d;
-  box-shadow: 0px 2px 2px #565e96;
-  cursor: pointer;
-  transition: 0.2s;
+    background: #fff;
+    font-size: 14px;
+    margin-top: 30px;
+    padding: 16px 20px;
+    border-radius: 26px;
+    border: 1px solid #d4d3e8;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    color: #485c9d;
+    box-shadow: 0px 2px 2px #565e96;
+    cursor: pointer;
+    transition: 0.2s;
 }
 
 .login__submit:active,
 .login__submit:focus,
 .login__submit:hover {
-  border-color: #67739e;
-  outline: none;
+    border-color: #67739e;
+    outline: none;
 }
 
 .button__icon {
-  font-size: 24px;
-  margin-left: auto;
-  color: #7577b5;
+    font-size: 24px;
+    margin-left: auto;
+    color: #7577b5;
 }
 
 .aunae-logo-image {
-  margin-left: 20px;
-  margin-bottom: 20px;
-  position: fixed;
+    margin-left: 20px;
+    margin-top: 20px;
+    height: 70px;
+    width: 70px;
 }
 
 .aunae-logo {
-  position: absolute;
-  height: 140px;
-  width: 160px;
-  text-align: center;
-  bottom: 0px;
-  right: 0px;
-  color: #fff;
+    position: absolute;
+    height: 140px;
+    width: 160px;
+    text-align: center;
+    bottom: 0px;
+    right: 0px;
+    color: #fff;
 }
