--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -11,6 +11,18 @@ body {
     background: linear-gradient(90deg, rgb(226, 224, 255), #3071c3);
 }
 
+div.left {
+    width: 60%;
+    float: left;
+    box-sizing: border-box;
+}
+
+div.right {
+    width: 40%;
+    float: right;
+    box-sizing: border-box;
+}
+
 .container {
     display: flex;
     align-items: center;
