--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -7,7 +7,16 @@
   font-family: Raleway, sans-serif;
 }
 
+div {
+  display: block;
+}
+form {
+  display: block;
+  margin-top: 0em;
+}
 body {
+  display: block;
+  margin: 8px;
   background: linear-gradient(90deg, rgb(226, 224, 255), #3071c3);
 }
 
@@ -164,4 +173,14 @@ body {
   bottom: 0px;
   right: 0px;
   color: #fff;
+}
+
+.aunae-logo h3 {
+  display: block;
+  font-size: 1.17em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
 }
